added scan dropdown, linking is broken rn

--- a/swagscanner_widgets/CMakeLists.txt
+++ b/swagscanner_widgets/CMakeLists.txt
@@ -1,11 +1,21 @@
-add_library(swag_widget SHARED
+add_library(calibration_widget_basic SHARED
         CalibrationDropdownBasic.h CalibrationDropdownBasic.cpp)
-target_link_libraries(swag_widget qt_collapsible_section)
+
+add_library(scan_widget_basic SHARED
+        ScanDropdownBasic.cpp ScanDropdownBasic.h)
+
+target_link_libraries(calibration_widget_basic qt_collapsible_section)
+target_link_libraries(scan_widget_basic qt_collapsible_section)
 
 add_executable(executable mainwindow.h mainwindow.cpp mainwindow.ui main.cpp)
 
-target_link_libraries(executable swag_widget)
 
-install(TARGETS swag_widget
+
+install(TARGETS
+        calibration_widget_basic
+        scan_widget_basic
         DESTINATION ${QT_INSTALL_PLUGINS}/designer
         )
+
+target_link_libraries(executable calibration_widget_basic)
+target_link_libraries(executable scan_widget_basic)
