refactored to compile section to static library

--- a/swagscanner_widgets/CMakeLists.txt
+++ b/swagscanner_widgets/CMakeLists.txt
@@ -1,11 +1,23 @@
-add_library(swag_widget SHARED
+add_library(section
+        Section.h Section.cpp)
+
+target_link_libraries(section PUBLIC Qt5::Quick Qt5::Core Qt5::Widgets Qt5::Designer)
+
+add_library(calibration_basic_widget SHARED
         CalibrationDropdownBasic.h CalibrationDropdownBasic.cpp)
-target_link_libraries(swag_widget qt_collapsible_section)
+
+add_library(scan_basic_widget SHARED
+        ScanDropdownBasic.h ScanDropdownBasic.cpp)
+
+target_link_libraries(calibration_basic_widget section Qt5::Quick Qt5::Core Qt5::Widgets Qt5::Designer)
+target_link_libraries(scan_basic_widget section Qt5::Quick Qt5::Core Qt5::Widgets Qt5::Designer)
 
 add_executable(executable mainwindow.h mainwindow.cpp mainwindow.ui main.cpp)
 
-target_link_libraries(executable swag_widget)
+target_link_libraries(executable calibration_basic_widget)
 
-install(TARGETS swag_widget
+install(TARGETS
+        calibration_basic_widget
+        scan_basic_widget
         DESTINATION ${QT_INSTALL_PLUGINS}/designer
         )
